--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
             }
 
             dt.biz.util.openSlidePanel({
-                url: './index2.html', //打开侧边栏的url
+                url: 'http://www.baidu.com', //打开侧边栏的url
                 title: 'title', //侧边栏顶部标题
                 onSuccess: function(result) {
                     /*
