--- a/index.html
+++ b/index.html
@@ -151,13 +151,11 @@
 
             dt.biz.util.openSlidePanel({
                 url: 'http://www.baidu.com', //打开侧边栏的url
-                title: 'title', //侧边栏顶部标题
+                title: '百度', //侧边栏顶部标题
                 onSuccess: function(result) {
                     /*
                         调用biz.navigation.quit接口进入onSuccess, result为调用biz.navigation.quit传入的数值
                     */
-
-
                 },
                 onFail: function() {
                     /*
