--- a/index.html
+++ b/index.html
@@ -116,15 +116,19 @@
                     max: 10, //人数限制，当multiple为true才生效，可选范围1-1500
                     onSuccess: function(data) {
                         console.log(data)
-                            /* data结构
-                            [{
-                                "name": "张三", //姓名
-                                "avatar": "http://g.alicdn.com/avatar/zhangsan.png" //头像图片url，可能为空
-                                "emplId": '0573', //员工userid
-                            },
-                            ...
-                            ]
-                            */
+                        data.forEach(function(element) {
+                            window.write = element.emplId
+                            window.write = element.name
+                        }, this);
+                        /* data结构
+                        [{
+                            "name": "张三", //姓名
+                            "avatar": "http://g.alicdn.com/avatar/zhangsan.png" //头像图片url，可能为空
+                            "emplId": '0573', //员工userid
+                        },
+                        ...
+                        ]
+                        */
                     },
                     onFail: function(err) {}
                 });
