--- a/index.html
+++ b/index.html
@@ -117,8 +117,8 @@
                     onSuccess: function(data) {
                         console.log(data)
                         data.forEach(function(element) {
-                            window.write = element.emplId
-                            window.write = element.name
+                            document.write = element.emplId
+                            document.write = element.name
                         }, this);
                         /* data结构
                         [{
