--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
             }
 
             dt.biz.util.openSlidePanel({
-                url: 'http://www.baidu.com', //打开侧边栏的url
+                url: 'https://www.baidu.com', //打开侧边栏的url
                 title: '百度', //侧边栏顶部标题
                 onSuccess: function(result) {
                     /*
