--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
                     onSuccess: function(data) {
                         console.log(data)
                         data.forEach(function(element) {
+                            console.log(element)
                             document.write = element.emplId
                             document.write = element.name
                         });
