--- a/index.html
+++ b/index.html
@@ -118,8 +118,9 @@
                         console.log(data)
                         data.forEach(function(element) {
                             console.log(element)
-                            document.write = element.emplId
-                            document.write = element.name
+                            let p = document.createElement('p')
+                            p.innerHTML = element.name
+                            document.getElementsByTagName('body').appendChild(p)
                         });
                         /* data结构
                         [{
