--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
                             console.log(element)
                             let p = document.createElement('p')
                             p.innerHTML = element.name
-                            document.getElementsByTagName('body').appendChild(p)
+                            document.getElementsByTagName('body')[0].appendChild(p)
                         });
                         /* data结构
                         [{
