--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
                         data.forEach(function(element, i) {
                             console.log(element)
                             let p = document.createElement('p')
-                            p.innerHTML = i + '、' + element.name
+                            p.innerHTML = (i + 1) + '、' + element.name
                             document.getElementsByTagName('body')[0].appendChild(p)
                         });
                         /* data结构
