--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 "corpsecret": "KNx2mrz3gQZhm7FRCwAXGRQ6qm-0kJpZ05BYswbzCH1x9G3l-WQ5KkDrQYvu64p-"
             },
             success: function(res) {
-                console.log(res)
+                console.log(res.access_token)
             },
             error: function(error) {
                 console.log(error);
