--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         $.ajax({
             type: 'GET',
             url: 'https://oapi.dingtalk.com/gettoken',
-            // dataType: 'jsonp',
+            dataType: 'jsonp',
             data: {
                 "corpid": "dingb6a804608ad50c0d35c2f4657eb6378f",
                 "corpsecret": "KNx2mrz3gQZhm7FRCwAXGRQ6qm-0kJpZ05BYswbzCH1x9G3l-WQ5KkDrQYvu64p-"
