--- a/index.html
+++ b/index.html
@@ -22,21 +22,21 @@
 
 <script>
     window.onload = function() {
-        $.ajax({
-            type: 'GET',
-            url: 'https://oapi.dingtalk.com/gettoken',
-            dataType: 'jsonp',
-            data: {
-                "corpid": "dingb6a804608ad50c0d35c2f4657eb6378f",
-                "corpsecret": "KNx2mrz3gQZhm7FRCwAXGRQ6qm-0kJpZ05BYswbzCH1x9G3l-WQ5KkDrQYvu64p-"
-            },
-            success: function(res) {
-                console.log(res.access_token)
-            },
-            error: function(error) {
-                console.log(error);
-            }
-        });
+        // $.ajax({
+        //     type: 'GET',
+        //     url: 'https://oapi.dingtalk.com/gettoken',
+        //     dataType: 'jsonp',
+        //     data: {
+        //         "corpid": "dingb6a804608ad50c0d35c2f4657eb6378f",
+        //         "corpsecret": "KNx2mrz3gQZhm7FRCwAXGRQ6qm-0kJpZ05BYswbzCH1x9G3l-WQ5KkDrQYvu64p-"
+        //     },
+        //     success: function(res) {
+        //         console.log(res.access_token)
+        //     },
+        //     error: function(error) {
+        //         console.log(error);
+        //     }
+        // });
 
 
         let dt;
@@ -68,7 +68,7 @@
             corpId: 'dingb6a804608ad50c0d35c2f4657eb6378f', //必填，企业ID
             timeStamp: '1501486582', // 必填，生成签名的时间戳
             nonceStr: 'abcdefg', // 必填，生成签名的随机串
-            signature: '36f4507c4533dbf004ee6d74a5bf52ff4b7ad434', // 必填，签名
+            signature: 'b9018dcfa43820bcc8ee13a48eef8ee1ac5d451e', // 必填，签名
             // type: 0, //选填。0表示微应用的jsapi,1表示服务窗的jsapi。不填默认为0。该参数从dingtalk.js的0.8.3版本开始支持
             jsApiList: ['runtime.info', 'biz.contact.choose',
                     'device.notification.confirm', 'device.notification.alert',
